--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,13 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
-
-# Other files and folders
-.settings/
-
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
-
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+node_modules
+auth_info*.json
+output.csv
+*/.DS_Store
+.DS_Store
+.env
+browser-messages.json
+decoded-ws.json
+lib
+docs
+browser-token.json
+Proxy
+messages*.json
